# DiRAC3-testsuite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: .cproject  .project  CMakeLists.txt
src/BSMBench/: LICENSE  README.md  bsmbench
src/BSMBench/BSMBench/: CMakeLists.txt  Makefile
src/BSMBench/machine-config/: BGL.cfg  BGP-1.cfg  generic-1.cfg
src/BSMBench/sets/: balance-1.bsmbench  balance-1024.bsmbench  balance-2.bsmbench  balance-2048.bsmbench  balance-256.bsmbench  balance-4.bsmbench  balance-4096.bsmbench  balance-512.bsmbench  balance-64.bsmbench  balance-8.bsmbench  balance-8192.bsmbench  comms-16.bsmbench  comms-2.bsmbench  comms-2048.bsmbench  comms-4.bsmbench  comms-4096.bsmbench  comms-512.bsmbench  comms-64.bsmbench  comms-8.bsmbench  compute-1.bsmbench  compute-16.bsmbench  compute-2.bsmbench  compute-256.bsmbench  compute-32.bsmbench  compute-512.bsmbench  compute-8.bsmbench  compute-8192.bsmbench  gen.sh  rungen.sh  template.bsmbench
src/BigSort-20130808/: BigSort_Summary_v1.0.docx  CMakeLists.txt  README.txt  licence.txt
src/BigSort-20130808/BigSort/: CMakeLists.txt  Makefile  Makefile_orig  bin.cpp  check_order.cpp  extsort.cpp  extsort.h  extsortall.cpp  globals.h  main.cpp  quicksort.cpp  quicksortint.cpp  safeio.cpp  tukey.sh  tukey_sub.sh
src/BigSort-20130808/CheckOrder/: CMakeLists.txt  Makefile  check_order.cpp  globals.h  main.cpp
src/BigSort-20130808/GenSeq/: CMakeLists.txt  Makefile  main.cpp
src/BigSort-20130808/ShuffleSeq/: CMakeLists.txt  Makefile  main.cpp
src/BigSort-20130808/commons/: Makefile
src/CL3D/: .CMakeLists.txt.swp  1c_clover_out  24c_clover_out  CMakeCache.txt  CMakeLists.txt  Makefile  PdV.optrpt  PdV_kernel.optrpt  accelerate_kernel.optrpt  ad.f90  ad_flops.txt  advec_cell_driver.f90  advec_cell_kernel.f90  advec_cell_kernel.optrpt  advec_mom_driver.f90  advec_mom_kernel.f90  advec_mom_kernel.f90.debug  advec_mom_kernel.f90_vec  advec_mom_kernel.optrpt  advec_report_without_tau  advec_vecreport  advection.f90  advection.optrpt  build_field.optrpt  calc_dt.optrpt  calc_dt_kernel.optrpt  clover.f90  clover.in  clover.in.tmp  clover.optrpt  clover.out.1c.96  clover.out.4  clover.out.4c.96  clover.t  clover_leaf.f90  clover_orig.in  cmake_install.cmake  definitions.f90  field_summary.optrpt  field_summary_kernel.optrpt  (+26 more)
src/CL3D/inputs/: clover.in
src/Gadget3Eagle/: CMakeLists.txt
src/Grid/: CMakeLists.txt
src/HACCmk/: CMakeLists.txt  CheckAll.in  RunAll.in  RunMe.sh.in  Step10_orig.c  main.c
src/MILCmk-v1/: CMakeLists.txt  alignment_macros.c  alignment_macros.h  runtests.in
src/MILCmk-v1/qla-1.7.1/: QLA_D3_D_vpeq_spproj_M_times_pD.c  QLA_D3_M_veq_M_times_pM.c  QLA_D3_V_vmeq_pV.c  QLA_D3_r1_veq_norm2_V.c  QLA_F3_D_vpeq_spproj_M_times_pD.c  QLA_F3_M_veq_M_times_pM.c  QLA_F3_V_veq_Ma_times_V.c  QLA_F3_V_vpeq_M_times_pV.c  QLA_F3_r1_veq_norm2_V.c  qla_d3.h  qla_f3.h
src/STRIDE_v1.1/: CMakeLists.txt  run.cache.in  runit.in  script.cache.in  vecop.c
src/UMTmk1.2/: CMakeLists.txt  Makefile  geometry_mod.F90  main.F90  snswp3d.F90  zonedata_mod.F90
src/UMTmk1.2/large/: fort.11  fort.12  fort.13
src/UMTmk1.2/small/: fort.11  fort.14
src/Walls/: CMakeLists.txt
src/amgmk-v1.0/: CMakeLists.txt  Makefile  main.c
src/amgmk-v1.0_tmp/: .CMakeLists.txt.swp  CMakeLists.txt
src/graph500-2.1.4/: CMakeLists.txt  Makefile
src/graph500-2.1.4/mpi/: CMakeLists.txt  Makefile  Makefile_asfd  graph500_mpi_custom  graph500_mpi_one_sided  graph500_mpi_replicated  graph500_mpi_replicated_csc  graph500_mpi_simple
src/ior/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt_asfd  config.h  ior.c  parse_options.c  utilities.c
src/ior/ARCHER_submission_scripts/: README.md
src/ior/inputs/: NS.FPS  NS.SHF  NW.FPS
src/nekbone_kernel-2.0/: CMakeLists.txt
src/nekbone_kernel-2.0/src/: Makefile
src/plot_scripts/: bsm_bench.py  qphix_plot.py  qphix_plot_single_node.py
src/plot_scripts/BSMBench/: bench_bsm.sh  bench_bsm_128.sh  bench_bsm_16.sh  bench_bsm_256.sh  bench_bsm_32.sh  bench_bsm_64.sh  bench_bsm_8.sh  bench_bsm_comms_128.sh  bench_bsm_comms_16.sh  bench_bsm_comms_256.sh  bench_bsm_comms_32.sh  bench_bsm_comms_64.sh  bench_bsm_comms_8.sh  bench_bsm_compute_128.sh  bench_bsm_compute_16.sh  bench_bsm_compute_256.sh  bench_bsm_compute_32.sh  bench_bsm_compute_64.sh  bench_bsm_compute_8.sh  bsmbench_balance  make.sh  qphix_bench.err.571089  qphix_bench.out.571089  qphix_bench.out.571090  qphix_bench.out.571730  qphix_bench.out.574134  qphix_bench.out.574135  qphix_bench.out.574136  qphix_bench.out.574137  qphix_bench.out.574138  qphix_bench.out.574139  qphix_bench.out.574140  qphix_bench.out.574141  qphix_bench.out.574142  qphix_bench.out.574143  qphix_bench.out.574144  qphix_bench.out.574145  qphix_bench.out.574249  qphix_bench.out.574250  qphix_bench.out.574251  (+3 more)
src/plot_scripts/STREAM/: README  archer.gold  archer_backup  complexity.gold  cosma.gold  cosmos_2.gold  stream_plot.py
src/plot_scripts/poster_ior/: README  archer.gold  comsos_hdf5.gold  cosma_hdf5.gold  ior_line.py
src/plot_scripts/res/: 1_mpi_16.16.16.16.txt  1_mpi_16.16.16.32.txt  1_mpi_16.16.32.32.txt  1_mpi_16.32.32.32.txt  1_mpi_32.32.32.32.txt  1_mpi_4.4.4.4.txt  1_mpi_4.4.4.8.txt  1_mpi_4.4.8.8.txt  1_mpi_4.8.8.8.txt  1_mpi_8.16.16.16.txt  1_mpi_8.8.16.16.txt  1_mpi_8.8.8.16.txt  1_mpi_8.8.8.8.txt  results.txt
src/qphix/: .cproject  .gitignore  .project  CMakeLists.txt  CMakeLists.txt.with_qmp  Makefile  Makefile.in  README  aclocal.m4  config.status  configure  configure.ac
src/qphix/build_mpi/: CMakeCache.txt  Makefile  cmake_install.cmake
src/qphix/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
src/qphix/build_test123/: CMakeCache.txt  Makefile  cmake_install.cmake  time_dslash_noqdp
src/qphix/include/: CMakeLists.txt  Makefile  Makefile.in  qphix_config_internal.h
src/qphix/lib/: CMakeLists.txt  Makefile  Makefile.in
src/qphix/mpi_tests/: 1_mpi_4.4.4.4.txt  bench_qphix.sh  (+59 more)
src/stream_omp_v1.0/: CMakeLists.txt  RunStream.in  cosmos_qsub_template.in  stream_omp_v1.0.c
src/swift/: CMakeLists.txt
(+3027 files in other folders)
