add_subdirectory(CL3D)
add_subdirectory(Grid)
add_subdirectory(ior)
add_subdirectory(MILCmk-v1)
add_subdirectory(qphix)
add_subdirectory(stream_omp_v1.0)
add_subdirectory(STRIDE_v1.1)
add_subdirectory(swift)

if(DIRAC3_PRIVATE)
  add_subdirectory(Gadget3Eagle)
  add_subdirectory(Walls)
endif(DIRAC3_PRIVATE)
